--- a/Tic-Tac-Toe/index.html
+++ b/Tic-Tac-Toe/index.html
@@ -14,8 +14,10 @@
 
   <!--==================== TITULO ====================-->
   <title>Games | Tic-Tac-Toe</title>
+
   <!--==================== ICONO DE PESTAÑA ====================-->
   <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
+  <link rel="icon" sizes="64x64" href="assets/img/favicon.png"> 
 </head>
 <body>
   <div class="drag">
