--- a/Memory Card/index.html
+++ b/Memory Card/index.html
@@ -13,40 +13,26 @@
   <link rel="stylesheet" href="assets/css/style.css">
 
   <!--==================== TITULO ====================-->
-  <title>Games | Rock Paper Scissors</title>
+  <title>Games | Memory Card</title>
   
   <!--==================== ICONO DE PESTAÑA ====================-->
   <link rel="icon" sizes="64x64" href="assets/img/favicon.webp"> 
   <link rel="icon" sizes="64x64" href="assets/img/favicon.png"> 
 </head>
 <body>
-  <section class="container">
-    <div class="result_field">
-      <div class="result_images">
-        <span class="user_result">
-          <img src="assets/img/rock.png" alt="" />
-        </span>
-        <span class="cpu_result">
-          <img src="assets/img/rock.png" alt="" />
-        </span>
-      </div>
-      <div class="result">¡Juguemos!</div>
+  <div class="game">
+    <div class="controls">
+        <button>Iniciar</button>
+        <div class="stats">
+            <div class="moves">0 movimientos</div>
+            <div class="timer">Tiempo: 0 seg</div>
+        </div>
     </div>
-    <div class="option_images">
-      <span class="option_image">
-        <img src="assets/img/rock.png" alt="" />
-        <p>Roca</p>
-      </span>
-      <span class="option_image">
-        <img src="assets/img/paper.png" alt="" />
-        <p>Papel</p>
-      </span>
-      <span class="option_image">
-        <img src="assets/img/scissors.png" alt="" />
-        <p>Tijera</p>
-      </span>
+    <div class="board-container">
+        <div class="board" data-dimension="4"></div>
+        <div class="win">¡Ganaste!</div>
     </div>
-  </section>
+  </div>
   <!--==================== SCRIPT ====================-->
   <script src="assets/js/script.js"></script>
 </body>
